[gd_scene load_steps=3 format=2]

[ext_resource path="res://Gun1.gd" type="Script" id=1]
[ext_resource path="res://Resources/shoot.wav" type="AudioStream" id=2]

[node name="Gun1" type="Position2D"]
script = ExtResource( 1 )

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -36.816
pitch_scale = 1.95

[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
